--- a/apps/site/assets/css/_variables.scss
+++ b/apps/site/assets/css/_variables.scss
@@ -104,8 +104,8 @@ $icon-size-sm: $space-16;
 $icon-size-lg: $space-16 * 3;
 $tooltip-width: 20rem;
 
-$zindex-sticky: 7;
-$z-index-above-main-container-content: 6;
+$z-index-desktop-menu: 7;
+$zindex-sticky: 6;
 $z-index-datepicker-content: 5;
 $z-index-alert-show-title: 5;
 $z-index-alert-show-title-background: 4;
